# OpenGL

./: README.md
SVM/: Camera.cpp  Camera.h  Light.h  Model.cpp  Shader.cpp  Shader.h  Skybox.cpp  main.cpp
Skybox/: CMakeLists.txt  OpenGLCourseApp.vcxproj  main.cpp
trial/: CMakeLists.txt  cube.cpp  cube_glfw.cpp  following_tutorial.cpp
trial/include/glad/: glad.h
trial/shader/: cube.vsh
trial/src/: glad.c
